Removed CUAHSI orb below carousel :( Updated help text for images

--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -75,8 +75,6 @@
         <div class="container">
             <div class="row home-page-block">
                 <div class="col-xs-12">
-                    <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/logo-only.png"
-                         alt="HydroShare logo">
                     <center><strong><h3 class="home-page-block-title">Join the community to start sharing</h3></strong>
                     </center>
                     <center>
@@ -107,7 +105,7 @@
                         </li>
                         <li>
                             <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Access our web services API to facilitate automated and client access to almost all functionality</span></li>
+                            <span>Use the web services API to program automated and client access</span></li>
                         <li>
                             <div class="glyphicon glyphicon-ok checkmark"></div>
                             <span>Publish data and models to meet the requirements of your data management plan</span>
@@ -124,7 +122,7 @@
                 </div>
                 <div class="col-xs-12- col-sm-5 slideInBlock">
                     <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/laptop.png"
-                         alt="computer">
+                         alt="Browsing HydroShare">
                 </div>
             </div>
         </div>
@@ -156,7 +154,7 @@
                             </div>
                             <div>
                                 <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step2.png"
-                                     alt="Create data">
+                                     alt="Upload to HydroShare">
                             </div>
                         </div>
 
@@ -171,7 +169,7 @@
                             </div>
                             <div>
                                 <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step3.png"
-                                     alt="Create data">
+                                     alt="Describe with metadata">
                             </div>
                         </div>
                     </div>
@@ -185,7 +183,7 @@
                             </div>
                             <div>
                                 <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step4.png"
-                                     alt="Create data">
+                                     alt="Share with colleagues">
                             </div>
                         </div>
                     </div>
