--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -39,26 +39,26 @@
             </div>
         </div>
 
-        <ol class="carousel-controls carousel-indicators">
-            <li data-target="#home-page-carousel" data-slide-to="0" class="active">
-                <div class="carousel-control-block">
-                    <span class="carousel-control-icon glyphicon glyphicon-share "></span>
-                    <h5>SHARE</h5>
-                </div>
-            </li>
-            <li data-target="#home-page-carousel" data-slide-to="1">
-                <div class="carousel-control-block">
-                    <span class="carousel-control-icon glyphicon glyphicon-search"></span>
-                    <h5>DISCOVER</h5>
-                </div>
-            </li>
-            <li data-target="#home-page-carousel" data-slide-to="2">
-                <div class="carousel-control-block">
-                    <span class="carousel-control-icon glyphicon glyphicon-user"></span>
-                    <h5>COLLABORATE</h5>
-                </div>
-            </li>
-        </ol>
+{#        <ol class="carousel-controls carousel-indicators">#}
+{#            <li data-target="#home-page-carousel" data-slide-to="0" class="active">#}
+{#                <div class="carousel-control-block">#}
+{#                    <span class="carousel-control-icon glyphicon glyphicon-share "></span>#}
+{#                    <h5>SHARE</h5>#}
+{#                </div>#}
+{#            </li>#}
+{#            <li data-target="#home-page-carousel" data-slide-to="1">#}
+{#                <div class="carousel-control-block">#}
+{#                    <span class="carousel-control-icon glyphicon glyphicon-search"></span>#}
+{#                    <h5>DISCOVER</h5>#}
+{#                </div>#}
+{#            </li>#}
+{#            <li data-target="#home-page-carousel" data-slide-to="2">#}
+{#                <div class="carousel-control-block">#}
+{#                    <span class="carousel-control-icon glyphicon glyphicon-user"></span>#}
+{#                    <h5>COLLABORATE</h5>#}
+{#                </div>#}
+{#            </li>#}
+{#        </ol>#}
 
         <!-- Left and right controls -->
         <a class="left carousel-control" href="#home-page-carousel" role="button" data-slide="prev">
@@ -196,7 +196,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
                         {# Image credit: Android Design. Used under Creative Commons license. http://developer.android.com/design/style/devices-displays.html #}
-                        <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
+                        <img class="img-devices img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
                              alt="Screen sizes">
                     </div>
                     <div class="col-xs-12 col-sm-6 ">
