--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2023,6 +2023,7 @@
                             </p>
                             <p>Data publication agreement text to be completed by Dave ..</p>
                             <input type="checkbox" id="agree-chk"><label for="agree-chk" class="checkbox-label">I agree to the data publication agreement above.</label>
+                        </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                             <a type="button" id="publish-btn" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/publish/" disabled>Publish</a>
