--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -92,33 +92,17 @@
             <div class="row">
                 <div class="col-sm-12"><h2 class="home-page-block-title">What you can do with HydroShare</h2></div>
                 <div class="col-xs-12 col-sm-7 slideInBlock">
-                    <ul class="list-features">
-                        <li>
-                            <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Share your data and models with colleagues</span></li>
-                        <li>
-                            <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Manage who has access to the content that you share</span></li>
-                        <li>
-                            <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Share, access, visualize and manipulate a broad set of hydrologic data types and models</span>
-                        </li>
-                        <li>
-                            <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Use the web services API to program automated and client access</span></li>
-                        <li>
-                            <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Publish data and models to meet the requirements of your data management plan</span>
-                        </li>
-                        <li>
-                            <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Discover and access data and models published by others</span>
-                        </li>
-                        <li>
-                            <div class="glyphicon glyphicon-ok checkmark"></div>
-                            <span>Use web apps to visualize, analyze and run models on data in HydroShare</span>
-                        </li>
-                    </ul>
+                    <table id="table-features">
+                        <tbody>
+                            <tr><td><div class="glyphicon glyphicon-ok checkmark"></div></td><td>Share your data and models with colleagues</td></tr>
+                                <tr><td><div class="glyphicon glyphicon-ok checkmark"></div></td><td>Manage who has access to the content that you share</td></tr>
+                                <tr><td><div class="glyphicon glyphicon-ok checkmark"></div></td><td>Share, access, visualize and manipulate a broad set of hydrologic data types and models</td></tr>
+                                <tr><td><div class="glyphicon glyphicon-ok checkmark"></div></td><td>Use the web services API to program automated and client access</td></tr>
+                                <tr><td><div class="glyphicon glyphicon-ok checkmark"></div></td><td>Publish data and models to meet the requirements of your data management plan</td></tr>
+                                <tr><td><div class="glyphicon glyphicon-ok checkmark"></div></td><td>Discover and access data and models published by others</td></tr>
+                                <tr><td><div class="glyphicon glyphicon-ok checkmark"></div></td><td>Use web apps to visualize, analyze and run models on data in HydroShare</td></tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="col-xs-12- col-sm-5 slideInBlock">
                     <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/laptop.png"
@@ -201,7 +185,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 ">
                         <div class="table-display">
-                            <h2 class="table-cell-display availability-description">Available in all your devices</h2>
+                            <h2 class="table-cell-display availability-description">Available on all your devices</h2>
                         </div>
                     </div>
                 </div>
