modidy the pagination option position

--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -117,15 +117,14 @@
                     {% empty %}
                         <p>No results found.</p>
                     {% endfor %}
-
-                    {% if page.has_previous or page.has_next %}
-                        <div>
-                            {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                            |
-                            {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                        </div>
-                    {% endif %}
                 </table>
+                {% if page.has_previous or page.has_next %}
+                    <div style="float: right">
+                        {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+                        |
+                        {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+                    </div>
+                {% endif %}
             {% endif %}
         </div>
     </div>
