finished up everything before DOI registration

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -38,7 +38,7 @@
                                 <li class="list-group-item">
                                     <span data-facet="shared with me" class="badge">0</span>
                                     <label class="checkbox noselect">
-                                        <input type="checkbox" data-facet="shared with me" value="View">Shared with me</label>
+                                        <input type="checkbox" data-facet="shared with me" value="View">Viewable by me</label>
                                 </li>
                                 <li class="list-group-item">
                                     <span data-facet="favorites" class="badge">0</span>
