Added label for view mode.

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -488,6 +488,7 @@
                     {% else %}
                         <strong class="label-private">&nbspPrivate</strong>
                     {% endif %}
+                    {% if cm.raccess.shareable %}&<strong style="color:#5cb85c">&nbspShareable</strong>{% endif %}
                 {% endif %}
             </div>
 
